--- a/src/App.css
+++ b/src/App.css
@@ -132,13 +132,24 @@
 .sidebar-item {
   display: block;
 
-
+  position: relative;
   padding: 1rem;
   border-bottom: 1px solid var(--color-sidebar-border);
   cursor: pointer;
   transition: background 0.2s;
   text-decoration: none;
   color: var(--color-sidebar-text);
+}
+
+.sidebar-delete{
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+  
+  height: 25px;
+}
+.sidebar-delete img{
+  height: 100%;
 }
 
 .sidebar-item-active{
@@ -164,6 +175,9 @@
 
 .content-buttons{
   display: flex;
+  position: sticky;
+  top: 0;
+  z-index: 99;
 }
 
 .content-button-item{
